--- a/ui/results.html
+++ b/ui/results.html
@@ -30,6 +30,8 @@
     .card-pill { display:inline-flex; align-items:center; padding:6px 12px; border-radius:999px; border:1px solid rgba(0,255,65,0.35); font-size:12px; text-transform:uppercase; letter-spacing:1px; color:var(--bright); background:rgba(0,255,65,0.08); }
     .card-percent { font-size:clamp(48px,6vw,72px); font-weight:700; color:var(--bright); text-shadow:0 0 26px rgba(0,255,65,0.35); }
     .card-verdict { font-size:16px; text-transform:uppercase; letter-spacing:2px; color:var(--muted); }
+    .card-summary-title { margin:0 0 4px; font-size:18px; font-weight:600; color:var(--bright); letter-spacing:0.5px; }
+    .card-summary-body { margin:0; }
     .card-summary { margin:0; font-size:16px; line-height:1.6; color:var(--fg); }
     .card-lines { margin:0; padding-left:20px; color:var(--muted); line-height:1.5; }
     .card-lines li { margin-bottom:6px; }
